<resources>
    <string name="app_name">Combat Constructor 5e</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">First Fragment</string>
    <string name="view_encounters_fragment_label">Second Fragment</string>

    <string name="encounter_builder">Encounter Builder</string>
    <string name="my_monsters">My Monsters</string>
    <string name="my_encounters">My Encounters</string>
    <string name="create_encounters">Create Encounters</string>
    <string name="monster_name">Monster Name</string>
    <string name="back">Back</string>
    <string name="encounter_name">Encounter Name</string>
    <string name="randomize">Random</string>
    <string name="build_encounter">Build</string>
    <string name="create_monster">Create Monster</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_monster">Save Monster</string>
    <string name="save_encounter">Save Encounter</string>
    <string name="difficulty">Difficulty:</string>
    <string name="party_size">Party Size:</string>
    <string name="party_level">Party Level:</string>
    <string name="background_logo">background logo</string>
    <string name="homescreen_background">homescreen background</string>
    <string name="npc_type">NPC Type:</string>
    <string name="name">Name:</string>
    <string name="medium_fiend_lawful_evil">Medium fiend, lawful evil</string>
    <string name="_10">10</string>
    <string name="_82">82</string>
    <string name="type">Type:</string>
    <string name="armor_class">Armor Class:</string>
    <string name="scale_mail">scale mail</string>
    <string name="goblin">Goblin</string>
    <string name="hit_points">Hit Points</string>
    <string name="formula">Formula</string>
    <string name="_11d8">11D8 + 33</string>
    <string name="_30ft_fly_60ft">30ft., fly 60ft.</string>
    <string name="speed">Speed</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="_int">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="attributes">ATTRIBUTES</string>
    <string name="saves">SAVES</string>
    <string name="skills">SKILLS</string>
    <string name="acrobatics">Acrobatics</string>
    <string name="insight">Insight</string>
    <string name="performance">Performance</string>
    <string name="_0">0</string>
    <string name="animal_handling">Animal Handling</string>
    <string name="intimidation">Intimidation</string>
    <string name="persuasion">Persuasion</string>
    <string name="arcana">Arcana</string>
    <string name="religion">Religion</string>
    <string name="investigation">Investigation</string>
    <string name="athletics">Athletics</string>
    <string name="sleight_of_hand">Sleight of Hand</string>
    <string name="medicine">Medicine</string>
    <string name="deception">Deception</string>
    <string name="nature">Nature</string>
    <string name="stealth">Stealth</string>
    <string name="history">History</string>
    <string name="perception">Perception</string>
    <string name="survival">Survival</string>
    <string name="damage_vulnerabilities">Damage Vulnerabilities</string>
    <string name="fire">fire</string>
    <string name="damage_resistances">Damage Resistances</string>
    <string name="cold">cold</string>
    <string name="_250">250</string>
    <string name="damage_immunities">Damage Immunities</string>
    <string name="lightning_thunder">lightning, thunder</string>
    <string name="condition_immunities">Condition Immunities</string>
    <string name="charmed">charmed</string>
    <string name="senses">Senses</string>
    <string name="darkvision_120ft_passive_perception_10">darkvision 120ft., passive perception 10</string>
    <string name="languages">Languages</string>
    <string name="common_infernal">common, infernal</string>
    <string name="challenge">Challenge</string>
    <string name="_1">1</string>
    <string name="xp">XP</string>
    <string name="textview">TextView</string>
    <string name="result">Result</string>
    <string name="encounter_type">Encounter Type:</string>
    <string name="amount">amount</string>
    <string name="list_of_monsters">List of Monsters</string>
    <string name="generate">Generate</string>
    <string name="size">Size</string>
    <string name="encounter">Encounter</string>
    <string name="encounter_x">Encounter X</string>
    <string name="todo">TODO</string>
    <string name="save">Save</string>
    <string name="details">details</string>
    <string name="emptyEncounters">Oh no! A Kobold has stolen your encounters!</string>
    <string name="kobold_thief">kobold thief</string>
    <string name="emptyMonsters">Oh no! A Paladin has slain your monsters!</string>
    <string name="paladin">paladin</string>
    <string name="untitled_encounter">Untitled Encounter</string>

    <string-array name="partyLevels">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>Random</item>
    </string-array>
    <string-array name="partySize">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>Random</item>
    </string-array>
    <string-array name="difficulty">
        <item>Any</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Deadly</item>
    </string-array>
    <string-array name="monsterTabs">
        <item>BASIC INFO</item>
        <item>ATTRIBUTES</item>
        <item>SAVES</item>
        <item>SKILLS</item>
        <item>OTHER INFO</item>
        <item>FEATURES</item>
        <item>ACTIONS</item>
    </string-array>
    <string-array name="encounterType">
        <item>Any</item>
        <item>Boss</item>
        <item>Horde</item>
    </string-array>
</resources>