<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/vulnerabilities"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/damage_vulnerabilities"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_weakness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/fire"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:id="@+id/resistances"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/damage_resistances"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_resistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/cold"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:id="@+id/immunity_damage"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/damage_immunities"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_immunityDamage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/lightning_thunder"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:id="@+id/immunity_condition"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/condition_immunities"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_immunityCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/charmed"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:id="@+id/senses"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senses"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_senses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/darkvision_120ft_passive_perception_10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:id="@+id/languages"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/languages"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/common_infernal"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:id="@+id/challenge"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/challenge"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_challenge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_1"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_xp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/_250"
                android:inputType="textPersonName" />

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>